# pycmake_example

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml  test.py
src/: CMakeLists.txt  python_wrapper.cpp  wrapper.cpp
src/INumPy/: CMakeLists.txt  inumpy.hpp
src/INumPy/tpp/: inumpy.tpp
src/common/: c_methods.h
src/include/: c_methods.h  mymodule_error.h  pytype_hello.h
src/include/tpp/: c_hello.tpp  pytype_hello_copy.tpp  pytype_hello_methods.tpp
